--- a/app/src/main/res/layout/activity_list_basic.xml
+++ b/app/src/main/res/layout/activity_list_basic.xml
@@ -26,7 +26,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
-            android:scrollingCache="true" >
+            android:scrollingCache="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp">
 
         </android.support.v7.widget.RecyclerView>
 
