--- a/app/src/main/res/layout/item_detail_terima_part.xml
+++ b/app/src/main/res/layout/item_detail_terima_part.xml
@@ -15,93 +15,95 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="2dp">
 
-
-    <TableLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:padding="12dp"
-        android:stretchColumns="*">
+        android:layout_height="match_parent">
 
-        <TableRow>
+        <ImageButton
+            android:id="@+id/img_delete"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@android:color/transparent"
+            android:tint="@color/grey_80"
+            app:srcCompat="@drawable/ic_close"
+            android:layout_gravity="end"/>
 
-            <TextView
-                android:id="@+id/tv_noPart_detailTerimaPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:text="No. Part"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu" />
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="12dp"
+            android:stretchColumns="*">
 
-        </TableRow>
+            <TableRow>
 
-        <TableRow android:layout_marginTop="5dp">
+                <TextView
+                    android:id="@+id/tv_merk_detailTerimaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Merk"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_namaPart_detailTerimaPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nama Part"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_gravity="start"/>
+                <TextView
+                    android:id="@+id/tv_jumlah_detailTerimaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Jumlah"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_merk_detailTerimaPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Merk"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+            </TableRow>
 
-        </TableRow>
+            <TableRow android:layout_marginTop="5dp">
 
-        <TableRow android:layout_marginTop="5dp">
+                <TextView
+                    android:id="@+id/tv_namaPart_detailTerimaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Nama Part"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_jumlah_detailTerimaPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:text="Jumlah"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+                <TextView
+                    android:id="@+id/tv_lokasi_detailTerimaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Lokasi"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_harga_detailTerimaPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Harga"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
-        </TableRow>
+            </TableRow>
 
-        <TableRow android:layout_marginTop="5dp">
+            <TableRow android:layout_marginTop="5dp">
 
-            <TextView
-                android:id="@+id/tv_disc_detailTerimaPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:text="Discount"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+                <TextView
+                    android:id="@+id/tv_noPart_detailTerimaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="No. Part"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_net_detailTerimaPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Net"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
+                <TextView
+                    android:id="@+id/tv_folder_detailTerimaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Folder"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-        </TableRow>
+            </TableRow>
 
-    </TableLayout>
+        </TableLayout>
+
+    </FrameLayout>
 
 </android.support.v7.widget.CardView>
