--- a/app/src/main/res/layout/item_part_wajib_layanan.xml
+++ b/app/src/main/res/layout/item_part_wajib_layanan.xml
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:text="NAMA MASTER PART"
                 android:padding="10dp"
+                android:textSize="16sp"
                 android:textColor="@color/grey_900"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu" />
             
