--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -94,6 +94,7 @@
                             android:layout_height="wrap_content"
                             android:hint="Nomor Hanphone"
                             android:inputType="phone"
+                            android:maxLength="20"
                             android:maxLines="1"
                             android:singleLine="true" />
 
