--- a/app/src/main/res/layout/activity_checkin1_.xml
+++ b/app/src/main/res/layout/activity_checkin1_.xml
@@ -48,18 +48,21 @@
                         android:layout_height="wrap_content"
                         android:gravity="top|left"
                         android:hint="KELUHAN"
-                        android:inputType="textMultiLine|textCapSentences"
+                        android:inputType="textCapSentences"
                         android:maxLines="1"
+                        android:singleLine="true"
                         android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.FloatingActionButton
+                <ImageButton
                     android:id="@+id/fab_tambah_keluhan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@android:drawable/ic_input_add"
-                    app:backgroundTint="@color/purple_900" />
+                    android:backgroundTint="@color/transparent"
+                    android:tint="@color/grey_900"
+                    tools:ignore="UnusedAttribute" />
 
             </LinearLayout>
 
